<?xml version="1.0"?>
<package format="2">
  <name>forklift_map</name>
  <version>0.1.0</version>
  <description>Forklift warehouse map visualization for RViz</description>
  <maintainer email="yssun@hnu.edu.cn">Yueshuo Sun</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
</package>
