<?xml version="1.0"?>
<package format="2">
  <name>forklift_planner</name>
  <version>0.1.0</version>
  <description>Single-vehicle path planner and simulator for forklift warehouse</description>
  <maintainer email="yssun@hnu.edu.cn">Yueshuo Sun</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>forklift_map</depend>
  <depend>sandbox_msgs</depend>
</package>
